@@ -16,7 +16,7 @@ import sys, os
 # If your extensions are in another directory, add it here. If the directory
 # is relative to the documentation root, use os.path.abspath to make it
 # absolute, like shown here.
-#sys.path.append(os.path.abspath('.'))
+sys.path.append(os.path.abspath('../..'))
 
 # General configuration
 # ---------------------
@@ -36,7 +36,7 @@ master_doc = 'contents'
 
 # General information about the project.
 project = u'Beaker'
-copyright = u'2008-2009, Ben Bangert, Mike Bayer'
+copyright = u'2008-2010, Ben Bangert, Mike Bayer'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
