@@ -1,11 +1,14 @@
 # coding: utf-8
 from beaker.cache import clsmap, Cache
+from beaker.exceptions import InvalidCacheBackendError
 from beaker.middleware import CacheMiddleware
 from nose import SkipTest
 from webtest import TestApp
 
-if isinstance(clsmap.get('ext:database'), Exception):
-    raise SkipTest('SQLAlchemy extension not installed; skipping test')
+try:
+    clsmap['ext:sqla']._init_dependencies()
+except InvalidCacheBackendError:
+    raise SkipTest("an appropriate SQLAlchemy backend is not installed")
 
 import sqlalchemy as sa
 from beaker.ext.sqla import make_cache_table
